# hdmi-in-display

./: #CMakeLists.txt#  .clang-format  .editorconfig  .gitignore  CMakeLists.txt  INSTALL.md  PR_DESCRIPTION.md  README.md  control_ini.txt  hdmi_simple_display.cpp  m1235976.txt  m3456123.txt  ocr_config_updater.py  screenshot_funktion.md  setup-board.sh  shader.frag.glsl  shader.vert.glsl
.venv-ocr/: pyvenv.cfg
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  hdmi_simple_display
resources/: LICENSE
service/: hdmi-display.service
shaders/: shader.frag.glsl  shader.vert.glsl
